SJF Passed all testcases ✅